Added esLint and Prettier
