# controllers/documents.controller.js
@@ -5,11 +5,14 @@ const tableName = 'documents';
 DocumentsController = {
   getDocumentsFromTable: (req, res) => {
     try {
-      DynamodbService.getDocumentsFromTable(tableName).then((resp) => {
-        res.status(200).send(resp);
-      }, (error) => {
-        res.status(404).send('Document not found');
-      })
+      DynamodbService.getDocumentsFromTable(tableName).then(
+        (resp) => {
+          res.status(200).send(resp);
+        },
+        (error) => {
+          res.status(404).send('Document not found');
+        }
+      );
     } catch (error) {
       res.status(500).send(error);
     }
@@ -17,28 +20,36 @@ DocumentsController = {
 
   getDocumentFromTable: (req, res) => {
     try {
-      DynamodbService.getDocumentFromTable(tableName, req.params.documentId).then((resp) => {
-        res.status(200).send(resp);
-      }, (error) => {
-        res.status(404).send('Document not found');
-      })
+      DynamodbService.getDocumentFromTable(
+        tableName,
+        req.params.documentId
+      ).then(
+        (resp) => {
+          res.status(200).send(resp);
+        },
+        (error) => {
+          res.status(404).send('Document not found');
+        }
+      );
     } catch (error) {
       res.status(500).send(error);
     }
   },
-  
+
   addDocumentToTable: (req, res) => {
     try {
-      DynamodbService.addDocumentToTable(tableName, req.body).then((resp) => {
-        res.status(200).send(resp);
-      }, (error) => {
-        res.status(405).send('Invalid input');
-      });
+      DynamodbService.addDocumentToTable(tableName, req.body).then(
+        (resp) => {
+          res.status(200).send(resp);
+        },
+        (error) => {
+          res.status(405).send('Invalid input');
+        }
+      );
     } catch (error) {
       res.status(500).send(error);
     }
-  }
-  
-}
+  },
+};
 
 module.exports = DocumentsController;
